--- a/ajustes.html
+++ b/ajustes.html
@@ -18,7 +18,7 @@
     <aside id="sidebar" class="fixed top-0 left-0 h-full w-72 bg-white border-r border-gray-200 z-50 transform -translate-x-full transition-transform duration-300 lg:translate-x-0 lg:static">
       <div class="flex items-center justify-between p-5 border-b border-gray-100">
         <div class="flex items-center gap-3">
-          <div class="w-10 h-10 bg-gradient-to-br from-red-500 to-red-600 rounded-xl flex items-center justify-center shadow-lg shadow-red-200 text-white">
+          <div class="w-10 h-10 bg-gradient-to-br from-emerald-500 to-green-600 rounded-xl flex items-center justify-center shadow-lg shadow-green-200 text-white">
             <i data-lucide="shield" class="w-5 h-5"></i>
           </div>
           <div>
@@ -38,7 +38,7 @@
         <a href="lines.html" class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors">
           <i data-lucide="layers" class="w-5 h-5"></i> Lines
         </a>
-        <a href="ajustes.html" class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium bg-red-50 text-red-700 shadow-sm">
+        <a href="ajustes.html" class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium bg-emerald-50 text-emerald-700 shadow-sm">
           <i data-lucide="sliders" class="w-5 h-5"></i> Ajustes
         </a>
         <a href="upgrade.html" class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors">
@@ -58,7 +58,7 @@
       <div class="absolute bottom-0 left-0 right-0 p-4 border-t border-gray-100">
         <div class="flex items-center justify-between px-3 py-2">
           <div class="flex items-center gap-3">
-            <div class="w-8 h-8 rounded-full bg-red-100 flex items-center justify-center text-red-700 font-bold text-sm">A</div>
+            <div class="w-8 h-8 rounded-full bg-emerald-100 flex items-center justify-center text-emerald-700 font-bold text-sm">A</div>
             <div>
               <p id="user-role" class="text-sm font-medium text-gray-700">...</p>
               <p id="user-email" class="text-xs text-gray-400 truncate w-24">...</p>
@@ -86,7 +86,7 @@
 
         <div class="bg-white rounded-2xl border border-gray-100 shadow-sm p-5 space-y-4">
           <div class="flex items-start gap-3">
-            <div class="w-10 h-10 rounded-xl bg-red-50 text-red-700 flex items-center justify-center">
+            <div class="w-10 h-10 rounded-xl bg-emerald-50 text-emerald-700 flex items-center justify-center">
               <i data-lucide="tag" class="w-5 h-5"></i>
             </div>
             <div class="flex-1">
@@ -99,8 +99,8 @@
             <div>
               <label class="text-sm font-medium text-gray-700 mb-1 block">Tag atual</label>
               <div class="flex items-center gap-3">
-                <input id="tag-input" type="text" placeholder="Ex: ᵒᵗᵏ" class="flex-1 px-4 py-3 rounded-xl border border-gray-200 focus:border-red-500 focus:ring-2 focus:ring-red-100 outline-none text-sm" />
-                <button id="btn-save-tag" class="px-4 py-3 rounded-xl bg-gradient-to-r from-red-500 to-red-600 text-white text-sm font-medium shadow-lg hover:shadow-xl transition-all active:scale-95">
+                <input id="tag-input" type="text" placeholder="Ex: ᵒᵗᵏ" class="flex-1 px-4 py-3 rounded-xl border border-gray-200 focus:border-emerald-500 focus:ring-2 focus:ring-emerald-100 outline-none text-sm" />
+                <button id="btn-save-tag" class="px-4 py-3 rounded-xl bg-gradient-to-r from-emerald-500 to-green-600 text-white text-sm font-medium shadow-lg hover:shadow-xl transition-all active:scale-95">
                   Salvar
                 </button>
               </div>
@@ -216,7 +216,7 @@
   </script>
   
 <!-- OTK Footer -->
-  <footer id="otk-footer" class="mt-12 border-t border-red-500/10 text-slate-700">
+  <footer id="otk-footer" class="mt-12 border-t border-emerald-500/10 text-slate-700">
     <div class="mx-auto w-full max-w-5xl px-4 py-10">
       <div class="flex flex-col items-center gap-4">
   
