--- a/camp.html
+++ b/camp.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/lucide@latest"></script>
   <script>
-    tailwind.config = { theme: { extend: { colors: { red: { 50:'#fef2f2', 100:'#fee2e2', 200:'#fecaca', 400:'#f87171', 500:'#ef4444', 600:'#dc2626', 700:'#b91c1c'} } } } }
+    tailwind.config = { theme: { extend: { colors: { emerald: { 50:'#ecfdf5', 100:'#d1fae5', 200:'#a7f3d0', 400:'#34d399', 500:'#10b981', 600:'#059669', 700:'#047857'} } } } }
   </script>
   <link rel="stylesheet" href="./style.css" />
 </head>
@@ -19,7 +19,7 @@
     <aside id="sidebar" class="fixed top-0 left-0 h-full w-72 bg-white border-r border-gray-200 z-50 transform -translate-x-full transition-transform duration-300 lg:translate-x-0 lg:static">
       <div class="flex items-center justify-between p-5 border-b border-gray-100">
         <div class="flex items-center gap-3">
-          <div class="w-10 h-10 bg-gradient-to-br from-red-500 to-red-600 rounded-xl flex items-center justify-center shadow-lg shadow-red-200 text-white"><i data-lucide="shield" class="w-5 h-5"></i></div>
+          <div class="w-10 h-10 bg-gradient-to-br from-emerald-500 to-green-600 rounded-xl flex items-center justify-center shadow-lg shadow-green-200 text-white"><i data-lucide="shield" class="w-5 h-5"></i></div>
           <div><h1 class="font-bold text-gray-900 text-lg">Guilda e eventos</h1><p class="text-xs text-gray-400">Painel</p></div>
         </div>
       </div>
@@ -33,14 +33,14 @@
         <a href="upgrade.html" class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors">
           <i data-lucide="sparkles" class="w-5 h-5"></i> Upgrade
         </a>
-        <a href="camp.html" class="only-leader w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium bg-red-50 text-red-700 shadow-sm"><i data-lucide="trophy" class="w-5 h-5"></i> Campeonato</a>
+        <a href="camp.html" class="only-leader w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium bg-emerald-50 text-emerald-700 shadow-sm"><i data-lucide="trophy" class="w-5 h-5"></i> Campeonato</a>
         <a href="admin.html" class="only-leader w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors"><i data-lucide="settings" class="w-5 h-5"></i> Admin</a>
         <a id="nav-chefe" href="chefe.html" class="hidden w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors"><i data-lucide="crown" class="w-5 h-5"></i> Chefe</a>
       </nav>
       <div class="absolute bottom-0 left-0 right-0 p-4 border-t border-gray-100">
         <div class="flex items-center justify-between px-3 py-2">
           <div class="flex items-center gap-3">
-            <div class="w-8 h-8 rounded-full bg-red-100 flex items-center justify-center text-red-700 font-bold text-sm">A</div>
+            <div class="w-8 h-8 rounded-full bg-emerald-100 flex items-center justify-center text-emerald-700 font-bold text-sm">A</div>
             <div><p id="user-role" class="text-sm font-medium text-gray-700">...</p><p id="user-email" class="text-xs text-gray-400 truncate w-24">...</p></div>
           </div>
           <button id="btn-logout" class="p-2 text-gray-400 hover:text-red-500 transition-colors"><i data-lucide="log-out" class="w-4 h-4"></i></button>
@@ -59,7 +59,7 @@
       <div class="p-4 sm:p-6 max-w-5xl mx-auto space-y-6">
         <div class="flex items-center justify-between">
           <div><h2 class="text-2xl font-bold text-gray-900">Eventos</h2><p class="text-gray-500 text-sm mt-1">Gerencie os campeonatos da guilda</p></div>
-          <button id="btn-new-camp" onclick="openCampModal()" class="flex items-center gap-2 bg-gradient-to-r from-red-500 to-red-600 text-white px-4 py-2.5 rounded-xl text-sm font-medium shadow-lg hover:shadow-xl transition-all active:scale-95">
+          <button id="btn-new-camp" onclick="openCampModal()" class="flex items-center gap-2 bg-gradient-to-r from-emerald-500 to-green-600 text-white px-4 py-2.5 rounded-xl text-sm font-medium shadow-lg hover:shadow-xl transition-all active:scale-95">
             <i data-lucide="plus" class="w-4 h-4"></i> Novo Campeonato
           </button>
         </div>
@@ -86,15 +86,15 @@
         <input type="hidden" id="camp-id">
         <div>
           <label class="block text-sm font-medium text-gray-700 mb-1.5">Nome *</label>
-          <input id="camp-name" type="text" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-red-500" required>
+          <input id="camp-name" type="text" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500" required>
         </div>
         <div>
           <label class="block text-sm font-medium text-gray-700 mb-1.5">Descrição</label>
-          <textarea id="camp-desc" rows="3" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-red-500"></textarea>
+          <textarea id="camp-desc" rows="3" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500"></textarea>
         </div>
         <div class="grid grid-cols-2 gap-3">
-          <div><label class="block text-sm font-medium text-gray-700 mb-1.5">Data</label><input id="camp-date" type="date" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-red-500"></div>
-          <div><label class="block text-sm font-medium text-gray-700 mb-1.5">Horário</label><input id="camp-time" type="time" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-red-500"></div>
+          <div><label class="block text-sm font-medium text-gray-700 mb-1.5">Data</label><input id="camp-date" type="date" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500"></div>
+          <div><label class="block text-sm font-medium text-gray-700 mb-1.5">Horário</label><input id="camp-time" type="time" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500"></div>
         </div>
 
         <div>
@@ -104,7 +104,7 @@
 
         <div>
           <label class="block text-sm font-medium text-gray-700 mb-1.5">Formato *</label>
-          <select id="camp-format" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-red-500 bg-white" required>
+          <select id="camp-format" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500 bg-white" required>
             <option value="br">Battle Royale</option>
             <option value="xvx">XvX (1v1 até 4v4)</option>
           </select>
@@ -113,7 +113,7 @@
         <div id="br-fields" class="grid grid-cols-2 gap-3">
           <div>
             <label class="block text-sm font-medium text-gray-700 mb-1.5">Modo (BR) *</label>
-            <select id="camp-mode" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-red-500 bg-white">
+            <select id="camp-mode" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500 bg-white">
               <option value="solo">SOLO</option>
               <option value="duo">DUO</option>
               <option value="squad">SQUAD</option>
@@ -121,14 +121,14 @@
           </div>
           <div>
             <label class="block text-sm font-medium text-gray-700 mb-1.5">Quedas *</label>
-            <select id="camp-drops" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-red-500 bg-white"></select>
+            <select id="camp-drops" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500 bg-white"></select>
           </div>
         </div>
 
         <div id="xvx-fields" class="grid grid-cols-2 gap-3 hidden">
           <div class="col-span-2">
             <label class="block text-sm font-medium text-gray-700 mb-1.5">Confronto *</label>
-            <select id="camp-xvx" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-red-500 bg-white">
+            <select id="camp-xvx" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500 bg-white">
               <option value="1v1">1v1</option>
               <option value="2v2">2v2</option>
               <option value="3v3">3v3</option>
@@ -140,28 +140,28 @@
         <div class="grid grid-cols-2 gap-3">
           <div>
             <label class="block text-sm font-medium text-gray-700 mb-1.5">Inscrição *</label>
-            <select id="camp-feeType" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-red-500 bg-white">
+            <select id="camp-feeType" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500 bg-white">
               <option value="free">Gratuito</option>
               <option value="paid">Pago</option>
             </select>
           </div>
           <div id="fee-value-wrap" class="hidden">
             <label class="block text-sm font-medium text-gray-700 mb-1.5">Valor (R$)</label>
-            <input id="camp-feeValue" type="number" step="0.01" min="0" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-red-500" placeholder="Ex: 5,00">
+            <input id="camp-feeValue" type="number" step="0.01" min="0" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500" placeholder="Ex: 5,00">
           </div>
         </div>
 
                 <div>
           <label class="block text-sm font-medium text-gray-700 mb-1.5">Premiação total (R$) (opcional)</label>
           <input id="camp-prizeTotal" type="text" inputmode="decimal" autocomplete="off"
-                 class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-red-500"
+                 class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500"
                  placeholder="Ex: 1500,00">
         </div>
 
         <div>
           <label class="block text-sm font-medium text-gray-700 mb-1.5">Link para informações (obrigatório) *</label>
           <input id="camp-link" type="url"
-                 class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-red-500"
+                 class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500"
                  placeholder="WhatsApp, Instagram, grupo, etc" required>
         </div>
 
@@ -173,7 +173,7 @@
           </div>
           <div>
             <label class="block text-sm font-medium text-gray-700 mb-1.5">Símbolo (se não usar foto)</label>
-            <select id="camp-icon" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-red-500 bg-white">
+            <select id="camp-icon" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500 bg-white">
               <option value="trophy">🏆 Troféu</option>
               <option value="crown">👑 Coroa</option>
               <option value="flame">🔥 Chama</option>
@@ -184,12 +184,12 @@
           </div>
         </div>
 
-        <div><label class="block text-sm font-medium text-gray-700 mb-1.5">Local</label><input id="camp-local" type="text" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-red-500"></div>
+        <div><label class="block text-sm font-medium text-gray-700 mb-1.5">Local</label><input id="camp-local" type="text" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500"></div>
         <div class="grid grid-cols-2 gap-3">
-          <div><label id="camp-max-label" class="block text-sm font-medium text-gray-700 mb-1.5">Máx. Participantes</label><select id="camp-max" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-red-500 bg-white"></select></div>
+          <div><label id="camp-max-label" class="block text-sm font-medium text-gray-700 mb-1.5">Máx. Participantes</label><select id="camp-max" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500 bg-white"></select></div>
           <div>
             <label class="block text-sm font-medium text-gray-700 mb-1.5">Status</label>
-            <select id="camp-status" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-red-500 bg-white">
+            <select id="camp-status" class="w-full px-4 py-2.5 border border-gray-200 rounded-xl text-sm outline-none focus:ring-2 focus:ring-emerald-500 bg-white">
               <option value="upcoming">Próximo</option>
               <option value="ongoing">Em andamento</option>
               <option value="finished">Finalizado</option>
@@ -198,7 +198,7 @@
         </div>
         <div class="flex gap-3 pt-2">
           <button type="button" onclick="closeCampModal()" class="flex-1 py-2.5 border border-gray-200 rounded-xl text-sm font-medium text-gray-600 hover:bg-gray-50">Cancelar</button>
-          <button type="submit" class="flex-1 py-2.5 bg-gradient-to-r from-red-500 to-red-600 text-white rounded-xl text-sm font-medium shadow-lg hover:shadow-xl">Salvar</button>
+          <button type="submit" class="flex-1 py-2.5 bg-gradient-to-r from-emerald-500 to-green-600 text-white rounded-xl text-sm font-medium shadow-lg hover:shadow-xl">Salvar</button>
         </div>
       </form>
     </div>
@@ -498,7 +498,7 @@
 
       el.innerHTML = list.map(c => {
         const statusClass = c.status === 'upcoming' ? 'bg-blue-100 text-blue-700' : (c.status === 'ongoing' ?
-          'bg-red-100 text-red-700' : 'bg-gray-100 text-gray-600');
+          'bg-emerald-100 text-emerald-700' : 'bg-gray-100 text-gray-600');
 
         const { fmt, fee } = formatMeta(c);
         const descRaw = (c.description || '').trim();
@@ -506,16 +506,16 @@
         const maxLabelTxt = (c.format === 'xvx') ? 'equipes' : 'participantes';
         const prizeTxt = formatBRL(c.prizeTotal);
         const prizeRow = prizeTxt
-          ? `<div class="flex items-center gap-2"><i data-lucide="gift" class="w-4 h-4 text-red-500"></i> ${prizeTxt}</div>`
+          ? `<div class="flex items-center gap-2"><i data-lucide="gift" class="w-4 h-4 text-emerald-500"></i> ${prizeTxt}</div>`
           : '';
 
         const iconHtml = c.photoBase64
           ? `<img src="${c.photoBase64}" class="w-11 h-11 rounded-xl object-cover ring-1 ring-gray-200" alt="">`
-          : `<div class="w-11 h-11 rounded-xl bg-red-50 flex items-center justify-center ring-1 ring-red-100">
-              <i data-lucide="${c.icon || 'trophy'}" class="w-6 h-6 text-red-600"></i>
+          : `<div class="w-11 h-11 rounded-xl bg-emerald-50 flex items-center justify-center ring-1 ring-emerald-100">
+              <i data-lucide="${c.icon || 'trophy'}" class="w-6 h-6 text-emerald-600"></i>
             </div>`;
 
-        const linkBtn = c.link ? `<a href="${c.link}" target="_blank" rel="noopener noreferrer" class="text-sm text-red-600 hover:text-red-700 px-3 py-2">Ver infos</a>` : '';
+        const linkBtn = c.link ? `<a href="${c.link}" target="_blank" rel="noopener noreferrer" class="text-sm text-emerald-600 hover:text-emerald-700 px-3 py-2">Ver infos</a>` : '';
 
         return `
           <div class="bg-white rounded-2xl border border-gray-100 shadow-sm overflow-hidden">
@@ -535,18 +535,18 @@
               </div>
 
               <div class="mt-4 space-y-2 text-sm text-gray-600">
-                <div class="flex items-center gap-2"><i data-lucide="swords" class="w-4 h-4 text-red-500"></i> ${fmt}</div>
-                <div class="flex items-center gap-2"><i data-lucide="wallet" class="w-4 h-4 text-red-500"></i> ${fee}</div>
+                <div class="flex items-center gap-2"><i data-lucide="swords" class="w-4 h-4 text-emerald-500"></i> ${fmt}</div>
+                <div class="flex items-center gap-2"><i data-lucide="wallet" class="w-4 h-4 text-emerald-500"></i> ${fee}</div>
                 ${prizeRow}
-                <div class="flex items-center gap-2"><i data-lucide="calendar" class="w-4 h-4 text-red-500"></i> ${c.date || 'Sem data'}</div>
-                <div class="flex items-center gap-2"><i data-lucide="clock" class="w-4 h-4 text-red-500"></i> ${c.time || 'Sem horário'}</div>
-                <div class="flex items-center gap-2"><i data-lucide="map-pin" class="w-4 h-4 text-red-500"></i> ${c.location || 'Sem local'}</div>
-                <div class="flex items-center gap-2"><i data-lucide="users" class="w-4 h-4 text-red-500"></i> ${c.max || '—'} ${maxLabelTxt}</div>
+                <div class="flex items-center gap-2"><i data-lucide="calendar" class="w-4 h-4 text-emerald-500"></i> ${c.date || 'Sem data'}</div>
+                <div class="flex items-center gap-2"><i data-lucide="clock" class="w-4 h-4 text-emerald-500"></i> ${c.time || 'Sem horário'}</div>
+                <div class="flex items-center gap-2"><i data-lucide="map-pin" class="w-4 h-4 text-emerald-500"></i> ${c.location || 'Sem local'}</div>
+                <div class="flex items-center gap-2"><i data-lucide="users" class="w-4 h-4 text-emerald-500"></i> ${c.max || '—'} ${maxLabelTxt}</div>
               </div>
 
               <div class="flex justify-end gap-2 pt-2 mt-4 border-t border-gray-100">
                 ${linkBtn}
-                <button onclick="editCamp('${c.id}')" class="text-sm text-gray-500 hover:text-red-600 px-3 py-2">Editar</button>
+                <button onclick="editCamp('${c.id}')" class="text-sm text-gray-500 hover:text-emerald-600 px-3 py-2">Editar</button>
                 <button onclick="deleteCamp('${c.id}')" class="text-sm text-red-400 hover:text-red-500 px-3 py-2">Excluir</button>
               </div>
             </div>
@@ -796,7 +796,7 @@
 
 
   <!-- OTK Footer -->
-<footer id="otk-footer" class="mt-12 border-t border-red-500/10 text-slate-700">
+<footer id="otk-footer" class="mt-12 border-t border-emerald-500/10 text-slate-700">
   <div class="mx-auto w-full max-w-5xl px-4 py-10">
     <div class="flex flex-col items-center gap-4">
 
