--- a/lines.html
+++ b/lines.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/lucide@latest"></script>
   <script>
-    tailwind.config = { theme: { extend: { colors: { red: { 50:'#fef2f2', 100:'#fee2e2', 200:'#fecaca', 400:'#f87171', 500:'#ef4444', 600:'#dc2626', 700:'#b91c1c'} } } } }
+    tailwind.config = { theme: { extend: { colors: { emerald: { 50:'#ecfdf5', 100:'#d1fae5', 200:'#a7f3d0', 400:'#34d399', 500:'#10b981', 600:'#059669', 700:'#047857'} } } } }
   </script>
   <link rel="stylesheet" href="./style.css" />
 </head>
@@ -21,7 +21,7 @@
     <aside id="sidebar" class="fixed top-0 left-0 h-full w-72 bg-white border-r border-gray-200 z-50 transform -translate-x-full transition-transform duration-300 lg:translate-x-0 lg:static">
       <div class="flex items-center justify-between p-5 border-b border-gray-100">
         <div class="flex items-center gap-3">
-          <div class="w-10 h-10 bg-gradient-to-br from-red-500 to-red-600 rounded-xl flex items-center justify-center shadow-lg shadow-red-200 text-white">
+          <div class="w-10 h-10 bg-gradient-to-br from-emerald-500 to-green-600 rounded-xl flex items-center justify-center shadow-lg shadow-green-200 text-white">
             <i data-lucide="shield" class="w-5 h-5"></i>
           </div>
           <div><h1 class="font-bold text-gray-900 text-lg">Guilda e eventos</h1><p class="text-xs text-gray-400">Painel</p></div>
@@ -35,7 +35,7 @@
         <a href="membros.html" class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors">
           <i data-lucide="users" class="w-5 h-5"></i> Membros
         </a>
-        <a href="lines.html" class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium bg-red-50 text-red-700 shadow-sm">
+        <a href="lines.html" class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium bg-emerald-50 text-emerald-700 shadow-sm">
           <i data-lucide="layers" class="w-5 h-5"></i> Lines
         </a>
         <a href="ajustes.html" class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors">
@@ -59,7 +59,7 @@
       <div class="absolute bottom-0 left-0 right-0 p-4 border-t border-gray-100">
         <div class="flex items-center justify-between px-3 py-2">
           <div class="flex items-center gap-3">
-            <div class="w-8 h-8 rounded-full bg-red-100 flex items-center justify-center text-red-700 font-bold text-sm">A</div>
+            <div class="w-8 h-8 rounded-full bg-emerald-100 flex items-center justify-center text-emerald-700 font-bold text-sm">A</div>
             <div>
               <p id="user-role" class="text-sm font-medium text-gray-700">Carregando...</p>
               <p id="user-email" class="text-xs text-gray-400 truncate w-24">...</p>
@@ -87,7 +87,7 @@
             </div>
           </div>
 
-          <button id="btn-new-line" title="Recurso PLUS" onclick="openLineModal()" class="flex items-center gap-2 px-4 py-2.5 bg-gradient-to-r from-red-500 to-red-600 text-white rounded-xl text-sm font-medium shadow-lg shadow-red-200 hover:shadow-xl hover:shadow-red-200 transition-all active:scale-95">
+          <button id="btn-new-line" title="Recurso PLUS" onclick="openLineModal()" class="flex items-center gap-2 px-4 py-2.5 bg-gradient-to-r from-emerald-500 to-green-600 text-white rounded-xl text-sm font-medium shadow-lg shadow-emerald-200 hover:shadow-xl hover:shadow-emerald-200 transition-all active:scale-95">
             <i data-lucide="plus" class="w-4 h-4"></i> <span class="hidden sm:inline">Adicionar</span>
           </button>
         </div>
@@ -95,7 +95,7 @@
         <div class="max-w-5xl mx-auto px-4 pb-4 flex gap-3">
           <div class="flex-1 relative">
             <i data-lucide="search" class="absolute left-3.5 top-1/2 -translate-y-1/2 w-4 h-4 text-gray-400"></i>
-            <input type="text" id="search-input" placeholder="Buscar por nome, nick ou ID..." class="w-full pl-10 pr-4 py-3 rounded-xl border border-gray-200 focus:border-red-500 focus:ring-2 focus:ring-red-100 outline-none text-sm transition-all bg-white">
+            <input type="text" id="search-input" placeholder="Buscar por nome, nick ou ID..." class="w-full pl-10 pr-4 py-3 rounded-xl border border-gray-200 focus:border-emerald-500 focus:ring-2 focus:ring-emerald-100 outline-none text-sm transition-all bg-white">
           </div>
           <button id="btn-refresh-lines" onclick="loadLines(true)" class="flex items-center gap-2 px-4 py-3 rounded-xl border border-gray-200 bg-white text-sm text-gray-600 hover:bg-gray-50 transition-colors" title="Atualizar">↻</button>
         </div>
@@ -129,7 +129,7 @@
       <div class="p-4 space-y-4">
         <div>
           <label class="text-xs font-bold text-gray-600 ml-1">Nome (opcional)</label>
-          <input id="line-name" type="text" class="w-full px-4 py-3 rounded-xl border border-gray-200 outline-none text-sm focus:border-red-500 focus:ring-2 focus:ring-red-100 transition-all" placeholder="Ex: Line Rush" />
+          <input id="line-name" type="text" class="w-full px-4 py-3 rounded-xl border border-gray-200 outline-none text-sm focus:border-emerald-500 focus:ring-2 focus:ring-emerald-100 transition-all" placeholder="Ex: Line Rush" />
         </div>
 
         <div class="bg-gray-50 rounded-2xl p-3 border border-gray-100">
@@ -142,7 +142,7 @@
 
           <div class="mt-3">
             <label class="text-xs font-bold text-gray-600 ml-1">Adicionar membro</label>
-            <select id="member-picker" class="w-full mt-1 px-4 py-3 rounded-xl border border-gray-200 bg-white outline-none text-sm focus:border-red-500 focus:ring-2 focus:ring-red-100 transition-all">
+            <select id="member-picker" class="w-full mt-1 px-4 py-3 rounded-xl border border-gray-200 bg-white outline-none text-sm focus:border-emerald-500 focus:ring-2 focus:ring-emerald-100 transition-all">
               <option value="">Selecione um membro...</option>
             </select>
             <button onclick="addPickedMember()" class="mt-2 w-full py-2.5 rounded-xl bg-white border border-gray-200 text-sm font-medium text-gray-700 hover:bg-gray-50 transition-colors">Adicionar</button>
@@ -150,7 +150,7 @@
         </div>
 
         <div class="flex gap-2 pt-1">
-          <button id="btn-save-line" onclick="saveLine()" class="flex-1 py-3 rounded-xl bg-gradient-to-r from-red-500 to-red-600 text-white font-bold text-sm shadow-lg shadow-red-200 hover:shadow-xl hover:shadow-red-200 transition-all active:scale-95">Salvar</button>
+          <button id="btn-save-line" onclick="saveLine()" class="flex-1 py-3 rounded-xl bg-gradient-to-r from-emerald-500 to-green-600 text-white font-bold text-sm shadow-lg shadow-emerald-200 hover:shadow-xl hover:shadow-emerald-200 transition-all active:scale-95">Salvar</button>
           <button id="btn-delete-line" onclick="deleteLine()" class="hidden flex-1 py-3 rounded-xl border border-red-200 text-red-600 font-bold text-sm hover:bg-red-50 transition-colors">Excluir</button>
         </div>
       </div>
@@ -256,7 +256,7 @@
 
     function detailBox(label, ok, meta) {
       const v = (ok === true || ok === 'Sim' || ok === 'sim') ? 'Sim' : (ok === false || ok === 'Não' || ok === 'nao' || ok === 'não') ? 'Não' : (ok || '-');
-      const cls = (v === 'Sim') ? 'text-red-600' : (v === 'Não') ? 'text-red-500' : 'text-gray-700';
+      const cls = (v === 'Sim') ? 'text-emerald-600' : (v === 'Não') ? 'text-red-500' : 'text-gray-700';
       return `<div class="bg-white rounded-xl p-3 border border-gray-100">
         <p class="text-xs text-gray-400 mb-1">${label}</p>
         <p class="text-xs font-bold ${cls}">${v}${meta ? ` • <span class="text-gray-400 font-semibold">${meta}</span>` : ''}</p>
@@ -320,7 +320,7 @@
         return `
           <div class="bg-white rounded-2xl border border-gray-100 shadow-sm overflow-hidden transition-all hover:shadow-md animate-in">
             <div class="w-full flex items-center gap-3 p-4 cursor-pointer" onclick="toggleLineDetails('${l.id}')">
-              <div class="w-11 h-11 rounded-full bg-gradient-to-br from-red-400 to-red-500 flex items-center justify-center flex-shrink-0 text-white font-bold text-sm">
+              <div class="w-11 h-11 rounded-full bg-gradient-to-br from-emerald-400 to-green-500 flex items-center justify-center flex-shrink-0 text-white font-bold text-sm">
                 ${name.charAt(0).toUpperCase()}
               </div>
               <div class="flex-1 min-w-0">
@@ -349,7 +349,7 @@
               <div class="space-y-2">
                 ${preview.length ? preview.map(m => `
                   <button class="w-full text-left bg-white rounded-2xl border border-gray-100 p-3 flex items-center gap-3 hover:bg-gray-50 transition-colors" onclick="openMemberView('${m.id}')">
-                    <div class="w-10 h-10 rounded-full bg-gradient-to-br from-red-400 to-red-500 flex items-center justify-center text-white font-bold text-xs">${(m.nick||'?').charAt(0).toUpperCase()}</div>
+                    <div class="w-10 h-10 rounded-full bg-gradient-to-br from-emerald-400 to-green-500 flex items-center justify-center text-white font-bold text-xs">${(m.nick||'?').charAt(0).toUpperCase()}</div>
                     <div class="flex-1 min-w-0">
                       <p class="text-sm font-semibold text-gray-900 truncate">${m.nick || 'Sem Nick'}</p>
                       <p class="text-xs text-gray-400 truncate">ID: ${m.visibleId || m.id || '-'}</p>
@@ -360,7 +360,7 @@
               </div>
 
               <div class="flex gap-2 pt-2">
-                <button onclick="editLine('${l.id}')" class="flex-1 py-2.5 rounded-xl border border-red-200 text-red-700 font-bold text-sm hover:bg-red-50 transition-colors">Editar</button>
+                <button onclick="editLine('${l.id}')" class="flex-1 py-2.5 rounded-xl border border-emerald-200 text-emerald-700 font-bold text-sm hover:bg-emerald-50 transition-colors">Editar</button>
               </div>
             </div>
           </div>
@@ -486,7 +486,7 @@
         const m = getMemberById(id) || { id, nick: '', visibleId: id };
         return `
           <div class="bg-white rounded-2xl border border-gray-100 p-3 flex items-center gap-3">
-            <div class="w-10 h-10 rounded-full bg-gradient-to-br from-red-400 to-red-500 flex items-center justify-center text-white font-bold text-xs">${(m.nick || '?').charAt(0).toUpperCase()}</div>
+            <div class="w-10 h-10 rounded-full bg-gradient-to-br from-emerald-400 to-green-500 flex items-center justify-center text-white font-bold text-xs">${(m.nick || '?').charAt(0).toUpperCase()}</div>
             <div class="flex-1 min-w-0">
               <p class="text-sm font-semibold text-gray-900 truncate">${m.nick || 'Sem Nick'}</p>
               <p class="text-xs text-gray-400 truncate">ID: ${(m.visibleId || m.id || '-')}</p>
@@ -697,7 +697,7 @@
       body.innerHTML = `
         <div class="bg-white rounded-2xl border border-gray-100 p-4 shadow-sm">
           <div class="flex items-center gap-3">
-            <div class="w-12 h-12 rounded-full bg-gradient-to-br from-red-400 to-red-500 flex items-center justify-center text-white font-bold">${(snap.nick||'?').charAt(0).toUpperCase()}</div>
+            <div class="w-12 h-12 rounded-full bg-gradient-to-br from-emerald-400 to-green-500 flex items-center justify-center text-white font-bold">${(snap.nick||'?').charAt(0).toUpperCase()}</div>
             <div class="min-w-0">
               <p class="text-base font-extrabold text-gray-900 truncate">${snap.nick || 'Sem Nick'}</p>
               <p class="text-xs text-gray-400">ID: ${snap.visibleId || snap.id || '-'}</p>
@@ -709,11 +709,11 @@
             ${detailBox('Meta Semanal', snap.weeklyMeta, snap.weeklyMetaValue)}
             <div class="bg-white rounded-xl p-3 border border-gray-100">
               <p class="text-xs text-gray-400 mb-1">Tag</p>
-              ${snap.hasTag ? '<span class="text-red-500 font-bold text-xs">Sim</span>' : '<span class="text-red-400 text-xs">Não</span>'}
+              ${snap.hasTag ? '<span class="text-emerald-500 font-bold text-xs">Sim</span>' : '<span class="text-red-400 text-xs">Não</span>'}
             </div>
             <div class="bg-white rounded-xl p-3 border border-gray-100">
               <p class="text-xs text-gray-400 mb-1">WhatsApp</p>
-              ${snap.whatsapp ? `<a href="https://wa.me/55${snap.whatsapp}" target="_blank" class="text-red-600 text-xs hover:underline">${snap.whatsapp}</a>` : '<span class="text-xs text-gray-400">-</span>'}
+              ${snap.whatsapp ? `<a href="https://wa.me/55${snap.whatsapp}" target="_blank" class="text-emerald-600 text-xs hover:underline">${snap.whatsapp}</a>` : '<span class="text-xs text-gray-400">-</span>'}
             </div>
           </div>
         </div>
