--- a/suporte.html
+++ b/suporte.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
-      theme: { extend: { colors: { red: { 50:'#fef2f2', 100:'#fee2e2', 200:'#fecaca', 400:'#f87171', 500:'#ef4444', 600:'#dc2626', 700:'#b91c1c' } } } }
+      theme: { extend: { colors: { emerald: { 50:'#ecfdf5', 100:'#d1fae5', 200:'#a7f3d0', 400:'#34d399', 500:'#10b981', 600:'#059669', 700:'#047857' } } } }
     }
   </script>
   <script src="https://unpkg.com/lucide@latest"></script>
@@ -37,8 +37,8 @@
   <aside id="sidebar" class="fixed left-0 top-0 z-50 h-full w-[280px] -translate-x-full bg-white backdrop-blur border-r border-slate-200 transition-transform">
     <div class="p-4 border-b border-slate-200 flex items-center justify-between">
       <div class="flex items-center gap-2">
-        <div class="h-9 w-9 rounded-xl bg-red-500/15 ring-1 ring-red-400/20 flex items-center justify-center">
-          <i data-lucide="shield" class="h-5 w-5 text-red-700"></i>
+        <div class="h-9 w-9 rounded-xl bg-emerald-500/15 ring-1 ring-emerald-400/20 flex items-center justify-center">
+          <i data-lucide="shield" class="h-5 w-5 text-emerald-700"></i>
         </div>
         <div class="leading-tight">
           <div class="text-slate-900 font-black">Guilda HUB</div>
@@ -85,7 +85,7 @@
           <div class="text-xs text-slate-500">Eventos • Camps • Stats</div>
         </div>
       </div>
-      <a href="index.html" class="text-sm font-semibold text-red-700 hover:text-red-800">Voltar</a>
+      <a href="index.html" class="text-sm font-semibold text-emerald-700 hover:text-emerald-800">Voltar</a>
     </div>
   </header><main class="mx-auto w-full max-w-6xl px-4 py-6">
 <section class="space-y-4">
@@ -101,7 +101,7 @@
           Para resolver rápido: manda print + o que você clicou antes do erro. Isso ajuda demais.
         </p>
       </div>
-      <i data-lucide="life-buoy" class="h-7 w-7 text-red-700"></i>
+      <i data-lucide="life-buoy" class="h-7 w-7 text-emerald-700"></i>
     </div>
 
     <div class="mt-5 grid grid-cols-1 gap-3 sm:grid-cols-2">
@@ -121,8 +121,8 @@
       <a href="https://chat.whatsapp.com/FsBRk3VNaGm29UmXldwaOE?mode=gi_t" target="_blank" rel="noopener noreferrer"
         class="rounded-2xl bg-white ring-1 ring-slate-200 p-4 hover:bg-white/10 transition">
         <div class="flex items-center gap-3">
-          <div class="h-10 w-10 rounded-2xl bg-red-500/15 ring-1 ring-red-400/20 flex items-center justify-center">
-            <i data-lucide="message-circle" class="h-5 w-5 text-red-200"></i>
+          <div class="h-10 w-10 rounded-2xl bg-emerald-500/15 ring-1 ring-emerald-400/20 flex items-center justify-center">
+            <i data-lucide="message-circle" class="h-5 w-5 text-emerald-200"></i>
           </div>
           <div>
             <div class="text-sm font-black">Grupo WhatsApp</div>
